Thymeleaf layout 적용/mysql 연동

--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -1,14 +1,5 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header" />
-<style>
-    .fieldError {
-        border-color: #bd2130;
-    }
-</style>
-<body>
-<div th:replace="fragments/navbar :: navbar" />
-<div class="container">
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<div layout:fragment="content" class="container my-3">
     <div class="my-3 border-bottom">
         <div>
             <h4>회원가입</h4>
@@ -41,5 +32,4 @@
         <button type="submit" class="btn btn-primary">회원가입</button>
     </form>
 </div>
-</body>
 </html>
