--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 <div class="sidebar" th:fragment="sidebar">
     <!-- Sidebar-->
     <div class="border-end bg-white" id="sidebar-wrapper">
-      <div class="sidebar-heading border-bottom bg-light"> <a  class=text-decoration-none href="/" >Archive B</a></div>
-      <div class="list-group list-group-flush">
-        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Book List</a>
-        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">My Book Archive</a>
-        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">My Book Comment</a>
-        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-      </div>
+        <div class="sidebar-heading border-bottom bg-light">
+            <a class=text-decoration-none href="/">Archive B</a>
+        </div>
+        <div class="list-group list-group-flush">
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/books/list">Book List</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">My Book Archive</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">My Book Comment</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
+        </div>
     </div>
 </div>
