--- a/src/main/resources/templates/members/loginForm.html
+++ b/src/main/resources/templates/members/loginForm.html
@@ -1,35 +1,25 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header" />
-<style>
-  .fieldError {
-    border-color: #bd2130;
-  }
-</style>
-<body>
-<div th:replace="fragments/navbar :: navbar" />
-<div class="container">
-  <div class="my-3 border-bottom">
-    <div>
-      <h4>로그인</h4>
+<html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<div layout:fragment="content" class="container my-3">
+    <div class="my-3 border-bottom">
+        <div>
+            <h4>로그인</h4>
+        </div>
     </div>
-  </div>
-  <form role="form" action="/members/login" method="post">
-    <div th:if="${param.error}">
-      <div class="alert alert-danger">
-        Email 또는 비밀번호를 확인해 주세요.
-      </div>
-    </div>
-    <div class="mb-3">
-      <label th:for="email" class="form-label">Email</label>
-      <input type="email" name="username" id="email" class="form-control">
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">비밀번호</label>
-      <input type="password" name="password" id="password" class="form-control">
-    </div>
-    <button type="submit" class="btn btn-primary">로그인</button>
-  </form>
+    <form role="form" action="/members/login" method="post">
+        <div th:if="${param.error}">
+            <div class="alert alert-danger">
+                Email 또는 비밀번호를 확인해 주세요.
+            </div>
+        </div>
+        <div class="mb-3">
+            <label th:for="email" class="form-label">Email</label>
+            <input type="email" name="username" id="email" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">비밀번호</label>
+            <input type="password" name="password" id="password" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary">로그인</button>
+    </form>
 </div>
-</body>
 </html>
