Book 전체/단일 조회, 제목으로 검색(querydsl)

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,9 +1,12 @@
-<html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml"
+xmlns:th="http://www.thymeleaf.org">
 <div layout:fragment="content" class="container my-3">
     <h1 class="mt-4">ArchiveB</h1>
     <p>지금 책을 검색하고, 리뷰와 별점을 확인하세요!</p>
-    <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="책 이름을 입력하세요!" aria-label="Search">
+    <form class="d-flex form-inline" action="/books/search" th:object="${bookSearch}"  >
+        <div class="form-group">
+            <input class="form-control me-2" type="text" th:field="*{title}" placeholder="책 이름을 입력하세요!" >
+        </div>
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
 </div>
