login 시 role 적용 안되는 것 수정/ Post 전체/단일조회

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@ xmlns:th="http://www.thymeleaf.org">
     <p>지금 책을 검색하고, 리뷰와 별점을 확인하세요!</p>
     <form class="d-flex form-inline" action="/books/search" th:object="${bookSearch}"  >
         <div class="form-group">
-            <input class="form-control me-2" type="text" th:field="*{title}" placeholder="책 이름을 입력하세요!" >
+            <input class="form-control me-2" type="text" th:field="*{searchWord}" placeholder="책 이름/작가 이름을 입력하세요!" >
         </div>
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
