--- a/src/main/resources/templates/books/search.html
+++ b/src/main/resources/templates/books/search.html
@@ -5,7 +5,7 @@
   <p>지금 책을 검색하고, 리뷰와 별점을 확인하세요!</p>
 
   <form class="d-flex" action="/books/search" th:object="${bookSearch}"  >
-      <input class="form-control me-2" type="text" th:field="*{title}" placeholder="책 이름을 입력하세요!" >
+      <input class="form-control me-2" type="text" th:field="*{searchWord}" placeholder="책 이름/작가 이름을 입력하세요!" >
     <button class="btn btn-outline-success" type="submit">Search</button>
   </form>
   <table>
