--- a/src/main/resources/templates/posts/postList.html
+++ b/src/main/resources/templates/posts/postList.html
@@ -1,6 +1,9 @@
 
 <html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 <div layout:fragment="content" class="container my-3">
+  <a th:href="@{/posts/write}" class="btn btn-primary">글쓰기</a>
+
+
   <table>
     <thead>
     <tr>
