post update/delete

--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -14,6 +14,9 @@
       <td><span th:text="${post.postDate}"> </span></td>
     </tr>
     <span th:text="${post.content}"> </span>
+    <a th:href="@{'/posts/'+${postId}+'/edit'}" class="btn btn-primary">수정</a>
+    <a th:href="@{'/posts/'+${postId}+'/delete'}" class="btn btn-primary">삭제</a>
+
     </tbody>
   </table>
 </div>
