--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -8,7 +8,7 @@
         <div class="list-group list-group-flush">
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/books/list">Book List</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/list">My Book Archive</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">My Book Comment</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/comments/list">My Book Comment</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
         </div>
     </div>
