--- a/src/main/resources/templates/books/adminBookList.html
+++ b/src/main/resources/templates/books/adminBookList.html
@@ -11,7 +11,7 @@
     <tbody>
     <tr th:each="list : ${books}" >
 
-      <td><a th:href="@{'/books/'+${list.id}}"><span th:text="${list.title}"> </span> </a></td>
+      <td><a th:href="@{'/admin/books/'+${list.id}}"><span th:text="${list.title}"> </span> </a></td>
       <td><span th:text="${list.author}"> </span></td>
     </tr>
     </tbody>
