--- a/src/main/resources/templates/books/adminDetail.html
+++ b/src/main/resources/templates/books/adminDetail.html
@@ -45,7 +45,9 @@
     </div>
 
     <button type="submit" class="btn btn-primary">수정</button>
+    <a th:href="@{'/admin/books/'+${bookId}+'/delete'}" class="btn btn-danger">삭제</a>
   </form>
+
 </div>
   <!-- 댓글 목록을 표시하는 템플릿 -->
   <ul>
