--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -6,7 +6,7 @@
             <a class=text-decoration-none href="/">Archive B</a>
         </div>
         <div class="list-group list-group-flush">
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/books/list">Book List</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/books/list(page=0)}">Book List</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/list">My Book Archive</a>
             <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/comments/list">My Book Comment</a>
         </div>
