--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,8 +7,8 @@
         </div>
         <div class="list-group list-group-flush">
             <a class="list-group-item list-group-item-action list-group-item-light p-3" th:href="@{/books/list(page=0)}">Book List</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/posts/list">My Book Archive</a>
-            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/comments/list">My Book Comment</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3"  th:href="@{/posts/list(page=0)}">My Book Archive</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3"  th:href="@{/comments/list(page=0)}">My Book Comment</a>
         </div>
     </div>
 </div>
